[gd_scene load_steps=4 format=3 uid="uid://otbmnc703nvl"]

[ext_resource type="Script" path="res://Scripts/Screens/pause_menu.gd" id="1_505oq"]
[ext_resource type="Shader" path="res://Materials/pause_menu.gdshader" id="2_sd3ap"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4j5f0"]
shader = ExtResource("2_sd3ap")
shader_parameter/amount = 3.0

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_505oq")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_4j5f0")
layout_mode = 0
offset_left = -4592.0
offset_top = -2833.0
offset_right = 4601.0
offset_bottom = 2700.0
color = Color(1, 1, 1, 0.27451)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -125.0
offset_right = 145.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Info" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Resume
"

[node name="NewRun" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "New Run"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Main Menu
"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 30
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/NewRun" to="." method="_on_new_run_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
